# orkky_pely

./: .editorconfig  Cargo.toml  Dockerfile  readme.md
.github/workflows/: rust.yml  wasm_build.yml
assets/: box.glb  castle.glb  kani.glb  map.glb  orkki.glb  tree.glb
config/: keymap.json  map.json
maps/: map.json
src/: action_queue.rs  animations.rs  app.rs  asset.rs  assets.rs  attack.rs  bullet.rs  camera.rs  character.rs  character_visuals.rs  collisions.rs  console_plugin.rs  constants.rs  cursor.rs  death.rs  despawn.rs  entities.rs  game_over.rs  game_plugin.rs  game_ui_plugin.rs  gltf.rs  ingame_menu.rs  input_handling.rs  inspector.rs  keymap.rs  lib.rs  light.rs  main.rs  map.rs  map_changes.rs  map_loader.rs  map_spawner.rs  math.rs  menu.rs  menu_plugin.rs  npc.rs  path_finding.rs  player.rs  player_control.rs  shape.rs  (+5 more)
www/: index.html
