[package]
name = "orkky_pely"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
log = "0.4"
bevy = "0.9"
bevy_rapier3d = "0.19.0"
bevy_fps_controller = "0.1.5-dev"
