[package]
name = "orkky_pely"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
log = "0.4"
bevy = { version = "0.9", features = ["bevy_animation"] }
bevy_rapier3d = {  version = "0.19.0", features = ["debug-render"] }
bevy_fps_controller = "0.1.5-dev"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "5"
notify-debouncer-mini = "0.2"
bevy-inspector-egui = "0.14.0"
bevy_console = "0.6.0"

